Beginner-Level/yaml-files/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: priyankadevops6304/paytm-backend:v4

        ports:
        - containerPort: 5000
