Beginner-Level/yaml-files/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: priyankadevops6304/paytm-frontend:v6

        ports:
        - containerPort: 80
