Beginner-Level/yaml-files/mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql
  namespace: paytm

spec:
  serviceName: mysql-headless

  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql

        image: mysql:5.7

        ports:
        - containerPort: 3306
