Beginner-Level/yaml-files/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30050

  type: NodePort
