Beginner-Level/yaml-files/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

  type: NodePort
