Beginner-Level/yaml-files/mysql-headless.yml
apiVersion: v1
kind: Service

metadata:
  name: mysql-headless

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
    - port: 3306
