Beginner-Level/yaml-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: paytm-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
